--- a/src/sass/layout/homePage/_homepage_team.scss
+++ b/src/sass/layout/homePage/_homepage_team.scss
@@ -5,6 +5,7 @@
 .team {
 
   &__cards {
+    padding-top: 50px;
     align-items: stretch;
 
     @include tablet-sd {
@@ -19,7 +20,7 @@
       overflow: hidden;
       object-fit: contain;
 
-      background: #F5F5FA;
+      background: $grey-color-bg;
       border-radius: 12px;
 
       @include tablet-hd {
@@ -120,7 +121,6 @@
   margin-bottom: calc($baseIndent / 2);
 
   text-align: center;
-
 }
 
 .swiper-pagination-bullet {
