--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -7,6 +7,7 @@
 
   &__language {
     padding: 5px 7px;
+
     font-size: 12px;
     line-height: 14px;
     font-weight: 700;
@@ -23,8 +24,8 @@
     }
 
     &:hover {
-      color: #B3B3BA;
-      background-color: #F5F5FA;
+      color: $grey-color-text;
+      background-color: $grey-color-bg;
     }
   }
 
@@ -38,13 +39,13 @@
 .white-header {
   .langswitcher {
     &__language {
-      color: #B3B3BA;
+      color: $grey-color-text;
 
       &:hover {
         background-color: white;
 
         @include tablet-sd {
-          background-color: #F5F5FA;;
+          background-color: $grey-color-bg;
         }
       }
     }
@@ -70,12 +71,12 @@
   &-icon {
     width: 100%;
 
-    stroke: rgb(255, 255, 255);
+    stroke: #ffffff;
   }
 
   &:hover {
     --burgerColor: #323264;
-    background-color: #E6E6F0;
+    background-color: $grey-color-separator;
   }
 }
 
@@ -108,7 +109,7 @@
   }
 
   &:hover {
-    background-color: #E6E6F0;
+    background-color: $grey-color-separator;
   }
 }
 
@@ -142,7 +143,7 @@
   background: transparent;
   border: none;
   width: 24px;
-    height: 24px;
+  height: 24px;
 
   &_icon {
     width: 100%;
@@ -158,7 +159,7 @@
 .white-header {
   .header-fb {
     &_icon {
-      fill: #B3B3BA;
+      fill: $grey-color-text;
 
       &:hover {
         fill: $accent-color;
@@ -167,7 +168,7 @@
   }
 }
 
-.fb-link{
+.fb-link {
   display: flex;
   padding: 0;
 
@@ -175,11 +176,13 @@
   border: none;
 
   width: 38px;
-    height: 38px;
+  height: 38px;
 
   .fb_icon {
     width: 100%;
+
     fill: $active-color-regular;
+
     transition: $baseAnimation;
 
     &:hover {
@@ -192,39 +195,45 @@
   display: flex;
   width: max-content;
   padding: 2px;
-  background: #E6E6F0;
+
+  background: $grey-color-separator;
   border-radius: 12px;
-  
 
   .btn-news {
     padding: 9px 30px;
-    cursor: pointer;
-    border: none;
-    border-radius: 10px;
-    background-color: #fff;
-    font-weight: 700;
+
     font-size: 16px;
     line-height: 20px;
+    font-weight: 700;
     text-align: center;
-    color: $main-color-regular;
 
-   
+
+    color: $main-color-regular;
+    background-color: #fff;
+
+    border: none;
+    border-radius: 10px;
+
+    cursor: pointer;
   }
 
   .btn-articles {
-    background-color: transparent;
-    border-radius: 10px;
     padding: 9px 30px;
-    cursor: pointer;
-    border: none;
+
+    font-size: 16px;
+    line-height: 20px;
     font-weight: 700;
-      font-size: 16px;
-      line-height: 20px;
-      text-align: center;
-      color: $main-color-regular;
+    text-align: center;
+
+    color: $main-color-regular;
+    background-color: transparent;
+    border: none;
+    border-radius: 10px;
+
+    cursor: pointer;
 
     &:hover {
-      background-color: #F5F5FA;
+      background-color: $grey-color-bg;
     }
   }
 }
@@ -232,39 +241,68 @@
 .recommended__button-btn {
   display: flex;
   width: max-content;
- 
-  background-color: $active-color-regular;
-  border-radius: 12px;
-  border: none;
   padding: 18px 30px;
-  cursor: pointer;
-  font-weight: 700;
+  justify-content: center;
+
   font-size: 16px;
   line-height: 20px;
+  font-weight: 700;
+
   color: #FFFFFF;
-  justify-content: center;
+  background-color: $active-color-regular;
+  border: none;
+  border-radius: 12px;
+
+  cursor: pointer;
 
   &:hover {
     background-color: $active-color-hover;
   }
-
 }
 
 .form__help-btn {
-  padding: 18px;
   display: flex;
+  padding: 18px;
   justify-content: center;
+
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+
+  color: #FFFFFF;
+  background-color: $active-color-regular;
   border: none;
   border-radius: 12px;
-  background-color: $active-color-regular;
-  font-weight: 700;
-font-size: 16px;
-line-height: 20px;
-text-align: center;
-color: #FFFFFF;
-cursor: pointer;
 
-&:hover {
-  background-color: $active-color-hover;
+  cursor: pointer;
+
+  &:hover {
+    background-color: $active-color-hover;
+  }
 }
+
+.btn-more {
+  width: 32px;
+  height: 32px;
+  padding: 0;
+
+  --btnMoreCircleColor: none;
+  stroke: $active-color-regular;
+  fill: $grey-color-bg;
+  background: transparent;
+  border: none;
+
+  transition: $baseAnimation;
+
+  cursor: pointer;
+
+  &_icon {
+    width: 100%;
+  }
+
+  :hover {
+    fill: $grey-color-bgAlt;
+    stroke: $accent-color;
+  }
 }
