--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,8 +7,8 @@
   right: -30px;
   left: -30px;
 
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: calc($baseIndent / 2);
+  padding-right: calc($baseIndent / 2);
 
   display: grid;
   max-width: 100vw;
@@ -38,7 +38,6 @@
   }
 
   @include tablet-hd {
-
     column-gap: 0;
     row-gap: 16px;
     grid-template-columns: repeat(2, minmax);
@@ -48,7 +47,6 @@
       "logo menu";
     align-self: center;
   }
-
 
   .burger__wrapper {
     display: flex;
@@ -125,7 +123,7 @@
         height: 6px;
         align-self: center;
 
-        background: #E6E6F0;
+        background: $grey-color-separator;
         border-radius: 50%;
 
         @include tablet-sd {
@@ -185,7 +183,7 @@
         height: 6px;
         align-self: center;
 
-        background: #E6E6F0;
+        background: $grey-color-separator;
         border-radius: 50%;
 
         @include tablet-sd {
@@ -202,7 +200,6 @@
       bottom: 0;
       left: 0;
       z-index: -1;
-
 
       margin-left: -30px;
       margin-right: -30px;
@@ -228,7 +225,7 @@
         height: 6px;
         align-self: center;
 
-        background: #E6E6F0;
+        background: $grey-color-separator;
         border-radius: 50%;
 
         @include tablet-sd {
@@ -249,11 +246,9 @@
     grid-area: logo;
     width: max-content;
     align-self: center;
-    // padding-left: calc($baseIndent / 4);
 
     @include tablet-sd {
       margin-left: 0;
-      // padding-left: 0;
     }
 
     @include tablet-hd {
@@ -264,7 +259,15 @@
       width: max-content;
     }
 
+    & .breadcrumbs_about-us {
+      display: none;
+    }
+
     & .breadcrumbs_services {
+      display: none;
+    }
+
+    & .breadcrumbs_team {
       display: none;
     }
 
@@ -279,7 +282,6 @@
 
   .is-shown__menu {
     display: flex;
-    
   }
 
   &__menu-wrapper {
@@ -408,7 +410,7 @@
           padding-bottom: 7px;
           justify-content: center;
 
-          background-color: #F5F5FA;
+          background-color: $grey-color-bg;
           border-radius: 12px;
 
           @include tablet-sd {
