--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,5 @@
 @use 'abstracts/variables' as *;
-@use 'abstracts/functions' as *;
 @use 'abstracts/mixins' as *;
-@use 'abstracts/placeholders' as *;
 
 @use 'vendor/swiper';
 
@@ -18,6 +16,8 @@
 @use 'layout/publications/publicationsd_recommended';
 @use 'layout/contact/contact_header';
 @use 'layout/contact/contact_contacts';
+@use 'layout/team/team_header';
+@use 'layout/team/team_cards';
 @use 'layout/footer';
 @use 'layout/header';
 @use 'layout/header-white';
