--- a/src/sass/components/_titles.scss
+++ b/src/sass/components/_titles.scss
@@ -95,6 +95,12 @@ span {
   font-weight: 700;
 
   color: $active-color-regular;
+
+  transition: $baseAnimation;
+
+  &:hover {
+    color: $accent-color;
+  }
 }
 
 .recommended-card-date {
@@ -132,8 +138,11 @@ span {
   padding: 0;
 
   &-text {
+    display: flex;
+    align-items: center;
+
     font-size: 14px;
-    line-height: 17px;
+    line-height: 10px;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -168,6 +177,8 @@ span {
   font-weight: 700;
 
   color: $grey-color-text;
+
+  transition: $baseAnimation;
 }
 
 .job_title {
