--- a/src/sass/layout/_clients.scss
+++ b/src/sass/layout/_clients.scss
@@ -31,6 +31,11 @@
       grid-template-columns: repeat(4, 1fr);
     }
 
+    @include desktop-hd {
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
     &-item {
       display: flex;
       height: 120px;
