--- a/src/sass/layout/_comparison.scss
+++ b/src/sass/layout/_comparison.scss
@@ -42,6 +42,13 @@
   }
 
   & .comparison-card_title {
+    display: flex;
     margin-bottom: calc($baseIndent / 4);
+
+    transition: $baseAnimation;
+
+    &:hover {
+      color: $accent-color;
+    }
   }
 }
